# balanced_ternary

./: CMakeLists.txt  README.md
include/: number.hpp  number.tpp  ternary_number.hpp  ternary_number.tpp  trit.hpp
src/: main.cpp  trit.cpp
tests/: number.cpp  ternary_number.cpp  trit.cpp
